--- a/README.html
+++ b/README.html
@@ -2,6 +2,8 @@
 
 <p>A simple markdown to html compiler. Its architecture is a series of passes, character by character, or line by line. I wrote it because I thought it might be fun (it was).</p>
 
+<p>You can see how nunomark renders this README <a href='./README.html'>here</a></p>
+
 <h2>Roadmap</h2>
 
 <p>Supported functionality:</p>
@@ -30,13 +32,13 @@
     <li>[x] Quotes</li>
     <li>[x] Read from file</li>
     <li>[x] Make this enough to support my forecasting newsletter</li>
+    <li>[x] Code blocks</li>
 </ul>
 
 
 <p>Functionality that might supported in the future</p>
 
 <ul>
-    <li>[ ] Code blocks</li>
     <li>[ ] Checklists</li>
     <li>[ ] Footnotes</li>
     <li>[ ] Smart quotes?</li>
@@ -90,4 +92,9 @@
 </blockquote>
 
 <p><i>Italics</i>, and <b>bold</b>, and <b><i>bold italics</i></b>.</p>
+
+<pre><code>
+A code block!
+</pre></code>
+
 
