add initial foonotes

--- a/README.html
+++ b/README.html
@@ -50,6 +50,7 @@
     </ul>
 
     <li>[ ] Check against the commonmark spec? <https://github.com/commonmark/commonmark-spec></li>
+    <li>[ ] Add unsafe mode, which tries to go on when encountering a mistake?</li>
 </ul>
 
 
@@ -84,7 +85,7 @@
     —<i>Many otherwise smart people, 2015</i> 
 </blockquote>
 
-<p>— <a href='https://blog.samaltman.com/technology-predictions'>Sam Altman's blog</a>, 2015, found when looking for sources for the first quote.</p>
+<p>— <a href='https://blog.samaltman.com/technology-predictions'>Sam Altman's blog</a><a href='#footnote-content-1' id='footnote-pointer-1' role='doc-backlink'><sup>1</sup></a> 2015, found when looking for sources for the first quote.</p>
 
 
 <hr>
@@ -96,9 +97,9 @@
 
 <p><i>Italics</i>, and <b>bold</b>, and <b><i>bold italics</i></b>.</p>
 
-<pre><code>
-A code block!
-</pre></code>
+<p>```</p>
+<p>A code block!</p>
+<p>```</p>
 
 <p>Two <a href='https://example.com'>links</a>, in one <a href='https://test.com'>line</a></p>
 
@@ -121,4 +122,10 @@ A code block!
 
     <li>Research and articles</li>
     <li>Odds and ends</li>
+</ul>
+
+
+
+<hr>
+<p id='footnote-content-1'>1.  lol <a href='#footnote-pointer-1' role='doc-backlink'>↩︎</a></p>
 
