--- a/scratchpad/footnotes.html
+++ b/scratchpad/footnotes.html
@@ -1,10 +1,16 @@
-<p>hello<a href="#fn1" class="footnote-ref" id="fnref1"
-role="doc-noteref"><sup>1</sup></a> world</p>
-<section class="footnotes footnotes-end-of-document"
-role="doc-endnotes">
-<hr />
-<ol>
-<li id="fn1" role="doc-endnote"><p>hello<a href="#fnref1"
-class="footnote-back" role="doc-backlink">↩︎</a></p></li>
-</ol>
+<p>
+  hello<a href="#fn1" class="footnote-ref" id="fnref1" role="doc-noteref"
+    ><sup>1</sup></a
+  >
+  world
+</p>
+<section class="footnotes footnotes-end-of-document" role="doc-endnotes">
+  <hr />
+  <ol>
+    <li id="fn1" role="doc-endnote">
+      <p>
+        hello<a href="#fnref1" class="footnote-back" role="doc-backlink">↩︎</a>
+      </p>
+    </li>
+  </ol>
 </section>
