add recursive / styled foonotes

--- a/README.html
+++ b/README.html
@@ -31,11 +31,10 @@
     <li>[x] Read from file</li>
     <li>[x] Make this enough to support my forecasting newsletter</li>
     <li>[x] Code blocks</li>
-    <li>[ ] Footnotes</li>
+    <li>[x] Footnotes</li>
     <ul>
-        <li>[ ] Simple foonotes</li>
-        <li>[ ] Footnotes and codeblocks at the same time</li>
-        <li>[ ] Markdown and footnotes inside footnotes?</li>
+        <li>[x] Simple foonotes</li>
+        <li>[x] Footnotes and codeblocks at the same time</li>
     </ul>
 
 </ul>
@@ -44,6 +43,12 @@
 <p>Functionality that might supported in the future</p>
 
 <ul>
+    <li>[ ] Better footnotes</li>
+    <ul>
+        <li>[ ] Markdown and footnotes inside footnotes?</li>
+        <li>[ ] Error checking for footnotes</li>
+    </ul>
+
     <li>[ ] Inline code</li>
     <li>[ ] Underlines</li>
     <li>[ ] Crossed out</li>
@@ -137,5 +142,6 @@ or [links](https://hello-world.net), but they won't render.
 
 
 <hr>
-<p id='footnote-content-1'>1.  lol <a href='#footnote-pointer-1' role='doc-backlink'>↩︎</a></p>
+<p id='footnote-content-1'>1.  <b><i>lol</i></b>
+ <a href='#footnote-pointer-1' role='doc-backlink'>↩︎</a></p>
 
