better parsing of footnotes

--- a/README.html
+++ b/README.html
@@ -35,6 +35,7 @@
     <ul>
         <li>[x] Simple foonotes</li>
         <li>[x] Footnotes and codeblocks at the same time</li>
+        <li>[x] Markdown and footnotes inside footnotes?</li>
     </ul>
 
 </ul>
@@ -45,10 +46,10 @@
 <ul>
     <li>[ ] Better footnotes</li>
     <ul>
-        <li>[ ] Markdown and footnotes inside footnotes?</li>
         <li>[ ] Error checking for footnotes</li>
     </ul>
 
+    <li>[ ] Add unsafe mode, which tries to go on when encountering a mistake?</li>
     <li>[ ] Inline code</li>
     <li>[ ] Underlines</li>
     <li>[ ] Crossed out</li>
@@ -56,12 +57,11 @@
     <ul>
         <li>[ ] Mathjax</li>
         <li>[ ] Blog comments</li>
-        <li>[ ] Checklists, with [~]</li>
+        <li>[ ] Checklists, with [~]. ❌〜✔️</li>
         <li>[ ] Smart quotes?</li>
     </ul>
 
     <li>[ ] Check against the commonmark spec? <https://github.com/commonmark/commonmark-spec></li>
-    <li>[ ] Add unsafe mode, which tries to go on when encountering a mistake?</li>
 </ul>
 
 
