--- a/README.html
+++ b/README.html
@@ -36,6 +36,7 @@
         <li>[x] Simple foonotes</li>
         <li>[x] Footnotes and codeblocks at the same time</li>
         <li>[x] Markdown and footnotes inside footnotes?</li>
+        <li>[x] Error checking for footnotes</li>
     </ul>
 
 </ul>
@@ -44,11 +45,6 @@
 <p>Functionality that might supported in the future</p>
 
 <ul>
-    <li>[ ] Better footnotes</li>
-    <ul>
-        <li>[ ] Error checking for footnotes</li>
-    </ul>
-
     <li>[ ] Add unsafe mode, which tries to go on when encountering a mistake?</li>
     <li>[ ] Inline code</li>
     <li>[ ] Underlines</li>
@@ -57,7 +53,10 @@
     <ul>
         <li>[ ] Mathjax</li>
         <li>[ ] Blog comments</li>
-        <li>[ ] Checklists, with [~]. ❌〜✔️</li>
+    </ul>
+
+    - [ ] Checklists, with [~]. [✗], [<b>〜</b>], [<b>~</b>] [✔️]
+    <ul>
         <li>[ ] Smart quotes?</li>
     </ul>
 
