use somewhat terser variables

--- a/README.html
+++ b/README.html
@@ -1,6 +1,6 @@
 <h1>nunomark</h1>
 
-<p>A simple markdown to html compiler. Its architecture is a series of passes, character by character, or line by line. I wrote it because I thought it might be fun (it was).</p>
+<p>A simple markdown to html compiler. Its architecture is mostly a series of passes, character by character, or line by line. I wrote it because I thought it might be fun (it was!).</p>
 
 <h2>Roadmap</h2>
 
@@ -60,14 +60,14 @@
         <li>[ ] Smart quotes?</li>
     </ul>
 
-    <li>[ ] Check against the commonmark spec? <https://github.com/commonmark/commonmark-spec></li>
+    <li>[ ] Check against the commonmark spec? <https://github.com/commonmark/commonmark-spec>, or against the initial implementation? <https://daringfireball.net/projects/markdown/> <https://daringfireball.net/projects/markdown/syntax></li>
 </ul>
 
 
 <p>Unsupported functionality:</p>
 
 <ul>
-    <li>[ ] --- headers</li>
+    <li>[ ] --- or === -style headers</li>
     <li>[ ] Weird cases of many bolds inside italics, or viceversa</li>
     <li>[ ] Tables?</li>
     <li>[ ] Ordered lists</li>
