add errors, replace log.Fatalf, add --wing-it option

--- a/README.html
+++ b/README.html
@@ -1,3 +1,4 @@
+Wing it flag: false
 <h1>nunomark</h1>
 
 <p>A simple markdown to html compiler. Its architecture is mostly a series of passes, character by character, or line by line. I wrote it because I thought it might be fun (it was!).</p>
@@ -46,6 +47,7 @@
 
 <ul>
     <li>[ ] Add unsafe mode, which tries to go on when encountering a mistake?</li>
+    <li>[ ] Warnings when text doesn't end with newline? <= produces all kinds of errors</li>
     <li>[ ] Inline code</li>
     <li>[ ] Underlines</li>
     <li>[ ] Crossed out</li>
@@ -95,7 +97,7 @@
     —<i>Many otherwise smart people, 2015</i> 
 </blockquote>
 
-<p>— <a href='https://blog.samaltman.com/technology-predictions'>Sam Altman's blog</a><a href='#footnote-content-1' id='footnote-pointer-1' role='doc-backlink'><sup>1</sup></a> 2015, found when looking for sources for the first quote.</p>
+<p>— <a href='https://blog.samaltman.com/technology-predictions'>Sam Altman's blog</a><a href='#footnote-content-1' id='footnote-pointer-1' role='doc-backlink'><sup>1</sup></a>, 2015, found when looking for sources for the first quote.</p>
 
 
 <hr>
